// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature/left-sidebar/LeftSidebarDropWrapper render should not render drop zone if it is not hovered and showDropZoneOnHover is true  1`] = `
<div
  className="left-sidebar-drop-wrapper"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div />
</div>
`;

exports[`feature/left-sidebar/LeftSidebarDropWrapper render should render a LeftSidebarDropWrapper component 1`] = `
<div
  className="left-sidebar-drop-wrapper"
>
  <div />
</div>
`;

exports[`feature/left-sidebar/LeftSidebarDropWrapper render should render drop zone if it is hovered and showDropZoneOnHover is true  1`] = `
<div
  className="left-sidebar-drop-wrapper"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="left-sidebar-drop-veil"
  >
    <span
      className="left-sidebar-drop-wrapper-text"
    />
  </div>
  <div />
</div>
`;
